--- a/app-works.html
+++ b/app-works.html
@@ -1,18 +1,18 @@
-<ul class="sample">
-  <li>
+<section class="app-slider">
+  <div>
     <a href="assets/img/works/anicap.jpg"
         data-lightbox="app"
         data-lightbox="あにきゃぷ"
         data-title="アニメのキャプチャ画像を収集して、自動でタグ付けしたいサービス。開発中。">
-      <img src="assets/img/works/anicap.jpg" height="580px">
+      <img src="assets/img/works/anicap.jpg" class="embed-player slide-image">
     </a>
-  </li>
-  <li>
+  </div>
+  <div>
     <a href="assets/img/works/soukai.png"
         data-lightbox="app"
         data-lightbox="総会あぷぷ"
         data-title="DENXの総会の出欠をとるアプリ">
-      <img src="assets/img/works/soukai.png">
+      <img src="assets/img/works/soukai.png" class="embed-player slide-image">
     </a>
-  </li>
-</ul>
+  </div>
+</section>
