--- a/index.html
+++ b/index.html
@@ -120,68 +120,26 @@
         </div>
         
         <div class="container ">
-          <!-- <ul class="sample">
-  <li>
-    <div class="item youtube">
-      <iframe src="https://www.youtube.com/embed/bxyrG1hxx04"
-        id="player"
-        width="1080"
-        height="580"
-        iv_load_policy=3
-        rel=0
-        showinfo=0
-      ></iframe>
-    </div>
-  </li>
-  <li>
-    <a href="assets/img/works/soukai.png"
-        data-lightbox="app"
-        data-lightbox="総会あぷぷ"
-        data-title="DENXの総会の出欠をとるアプリ">
-      <img src="assets/img/works/soukai.png">
-    </a>
-  </li>
-</ul> -->
-
-<section class="main-slider">
-  <div class="item image">
-    <span class="loading">Loading...</span>
-    <figure>
-      <div class="slide-image slide-media" style="background-image:url('https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLRkY4S0JDTk1BbE0');">
-        <img data-lazy="https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLRkY4S0JDTk1BbE0" class="image-entity" />
-      </div>
-      <figcaption class="caption">Static Image</figcaption>
-    </figure>
+          <section class="game-slider">
+  <div>
+    <iframe
+      src="https://www.youtube.com/embed/bxyrG1hxx04?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1"
+      class="embed-player slide-media"
+      width="980"
+      height="520"
+      frameborder="0"
+      allowfullscreen>
+    </iframe>
   </div>
-  <div class="item vimeo" data-video-start="4">
-    <iframe class="embed-player slide-media" src="https://player.vimeo.com/video/217885864?api=1&byline=0&portrait=0&title=0&background=1&mute=1&loop=1&autoplay=0&id=217885864" width="980" height="520" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <p class="caption">Vimeo</p>
-  </div>
-  <div class="item image">
-    <figure>
-      <div class="slide-image slide-media" style="background-image:url('https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLNXBIcEdOUFVIWmM');">
-        <img data-lazy="https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLNXBIcEdOUFVIWmM" class="image-entity" />
-      </div>
-      <figcaption class="caption">Static Image</figcaption>
-    </figure>
-  </div>
-  <div class="item youtube">
-    <iframe class="embed-player slide-media" width="980" height="520" src="https://www.youtube.com/embed/tdwbYGe8pv8?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&playlist=tdwbYGe8pv8&start=102" frameborder="0" allowfullscreen></iframe>
-    <p class="caption">YouTube</p>
-  </div>
-  <div class="item image">
-    <figure>
-      <div class="slide-image slide-media" style="background-image:url('https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLSlBkWDBsWXJNazQ');">
-        <img data-lazy="https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLSlBkWDBsWXJNazQ" class="image-entity" />
-      </div>
-      <figcaption class="caption">Static Image</figcaption>
-    </figure>
-  </div>
-  <div class="item video">
-    <video class="slide-video slide-media" loop muted preload="metadata" poster="https://drive.google.com/uc?export=view&id=0B_koKn2rKOkLSXZCakVGZWhOV00">
-      <source src="https://player.vimeo.com/external/138504815.sd.mp4?s=8a71ff38f08ec81efe50d35915afd426765a7526&profile_id=112" type="video/mp4" />
-    </video>
-    <p class="caption">HTML 5 Video</p>
+  <div>
+    <iframe
+      src="https://www.youtube.com/embed/tdwbYGe8pv8?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&playlist=tdwbYGe8pv8&start=102"
+      class="embed-player slide-media"
+      width="980"
+      height="520"
+      frameborder="0"
+      allowfullscreen>
+    </iframe>
   </div>
 </section>
 
@@ -194,30 +152,30 @@
         <div class="subtlecircle sectiondivider faicon">
           <span class="fa-stack">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-toggle-on fa-stack-1x"></i>
+            <i class="fa fa-folder fa-stack-1x"></i>
           </span>
           <h5 class="icon-title">APP Works</h5>
         </div>
         
         <div class="container ">
-          <ul class="sample">
-  <li>
+          <section class="app-slider">
+  <div>
     <a href="assets/img/works/anicap.jpg"
         data-lightbox="app"
         data-lightbox="あにきゃぷ"
         data-title="アニメのキャプチャ画像を収集して、自動でタグ付けしたいサービス。開発中。">
-      <img src="assets/img/works/anicap.jpg" height="580px">
+      <img src="assets/img/works/anicap.jpg" class="embed-player slide-image">
     </a>
-  </li>
-  <li>
+  </div>
+  <div>
     <a href="assets/img/works/soukai.png"
         data-lightbox="app"
         data-lightbox="総会あぷぷ"
         data-title="DENXの総会の出欠をとるアプリ">
-      <img src="assets/img/works/soukai.png">
+      <img src="assets/img/works/soukai.png" class="embed-player slide-image">
     </a>
-  </li>
-</ul>
+  </div>
+</section>
 
         </div>
       </div>
