--- a/game-works.html
+++ b/game-works.html
@@ -1,12 +1,38 @@
 <section class="game-slider">
   <div>
     <iframe
-      src="https://www.youtube.com/embed/bxyrG1hxx04?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1"
+      src="https://www.youtube.com/embed/bhA41joXAps?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&start=10"
       class="embed-player slide-media"
       width="980"
       height="520"
-      frameborder="0"
-      allowfullscreen>
+      frameborder="0">
+    </iframe>
+  </div>
+  <div>
+    <iframe
+      src="https://www.youtube.com/embed/ocFej2xjRgw?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&start=10"
+      class="embed-player slide-media"
+      width="980"
+      height="520"
+      frameborder="0">
+    </iframe>
+  </div>
+  <div>
+    <iframe
+      src="https://www.youtube.com/embed/bxyrG1hxx04?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&start=10"
+      class="embed-player slide-media"
+      width="980"
+      height="520"
+      frameborder="0">
+    </iframe>
+  </div>
+  <div>
+    <iframe
+      src="https://www.youtube.com/embed/gXN423E4Q1Q?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=5&start=1"
+      class="embed-player slide-media"
+      width="980"
+      height="520"
+      frameborder="0">
     </iframe>
   </div>
   <div>
@@ -15,8 +41,7 @@
       class="embed-player slide-media"
       width="980"
       height="520"
-      frameborder="0"
-      allowfullscreen>
+      frameborder="0">
     </iframe>
   </div>
 </section>
