--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
       </p>
 
       <p>
-        プログラマです。Unityを使用してゲームを作ったり、Railsを使ってWebアプリを作ったりしています。dockerも使えます。
+        プログラマです。Unityを使用してゲームを作ったり、Railsを使ってWebアプリを作ったりしています。dockerはじめました。
       </p>
 
       <ul class="social-icon">
