--- a/game-works.html
+++ b/game-works.html
@@ -1,47 +1,49 @@
-<section class="game-slider">
-  <div>
-    <iframe
-      src="https://www.youtube.com/embed/bhA41joXAps?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&start=10"
-      class="embed-player slide-media"
-      width="980"
-      height="520"
-      frameborder="0">
-    </iframe>
-  </div>
-  <div>
-    <iframe
-      src="https://www.youtube.com/embed/ocFej2xjRgw?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&start=10"
-      class="embed-player slide-media"
-      width="980"
-      height="520"
-      frameborder="0">
-    </iframe>
-  </div>
-  <div>
-    <iframe
-      src="https://www.youtube.com/embed/bxyrG1hxx04?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&start=10"
-      class="embed-player slide-media"
-      width="980"
-      height="520"
-      frameborder="0">
-    </iframe>
-  </div>
-  <div>
-    <iframe
-      src="https://www.youtube.com/embed/gXN423E4Q1Q?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=5&start=1"
-      class="embed-player slide-media"
-      width="980"
-      height="520"
-      frameborder="0">
-    </iframe>
-  </div>
-  <div>
-    <iframe
-      src="https://www.youtube.com/embed/tdwbYGe8pv8?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&playlist=tdwbYGe8pv8&start=102"
-      class="embed-player slide-media"
-      width="980"
-      height="520"
-      frameborder="0">
-    </iframe>
-  </div>
-</section>
+<div class="row">
+  <section class="game-slider col-md-10 col-md-offset-1">
+    <div>
+      <iframe
+        src="https://www.youtube.com/embed/bhA41joXAps?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&start=10"
+        class="embed-player slide-media"
+        width="980"
+        height="520"
+        frameborder="0">
+      </iframe>
+    </div>
+    <div>
+      <iframe
+        src="https://www.youtube.com/embed/ocFej2xjRgw?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&start=10"
+        class="embed-player slide-media"
+        width="980"
+        height="520"
+        frameborder="0">
+      </iframe>
+    </div>
+    <div>
+      <iframe
+        src="https://www.youtube.com/embed/bxyrG1hxx04?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&start=10"
+        class="embed-player slide-media"
+        width="980"
+        height="520"
+        frameborder="0">
+      </iframe>
+    </div>
+    <div>
+      <iframe
+        src="https://www.youtube.com/embed/gXN423E4Q1Q?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=5&start=1"
+        class="embed-player slide-media"
+        width="980"
+        height="520"
+        frameborder="0">
+      </iframe>
+    </div>
+    <div>
+      <iframe
+        src="https://www.youtube.com/embed/tdwbYGe8pv8?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&playlist=tdwbYGe8pv8&start=102"
+        class="embed-player slide-media"
+        width="980"
+        height="520"
+        frameborder="0">
+      </iframe>
+    </div>
+  </section>
+</div>
