ちょっとレスポンシブ対応

--- a/app-works.html
+++ b/app-works.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <section class="app-slider col-md-10 col-md-offset-1">
+  <section class="app-slider">
     <div>
       <a href="assets/img/works/anicap.jpg"
           data-lightbox="app"
