--- a/game-works.html
+++ b/game-works.html
@@ -36,5 +36,14 @@
         frameborder="0">
       </iframe>
     </div>
+    <div>
+      <iframe
+        src="https://www.youtube.com/embed/tdwbYGe8pv8?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&playlist=tdwbYGe8pv8&start=102"
+        class="embed-player slide-media"
+        width="980"
+        height="520"
+        frameborder="0">
+      </iframe>
+    </div>
   </section>
 </div>
