--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
       
       
       <li>
-        <a href="https://facebook.com/facebook" target="_blank">
+        <a href="https://facebook.com/100009575179002" target="_blank">
           <i class="fa fa-facebook fa-lg"></i>
         </a>
       </li>
